fix: 修复图片加载失败时的默认封面逻辑，优化搜索框的热搜词功能和URL更新逻辑

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nuxt/ui": "^3.0.2",
     "@tailwindcss/postcss": "^4.1.4",
     "@tailwindcss/vite": "^4.1.4",
+    "@vueuse/core": "^13.1.0",
     "nitro-cloudflare-dev": "^0.2.2",
     "nuxt": "^3.16.2",
     "ofetch": "^1.4.1",
