--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@nuxt/image": "^1.10.0",
     "@nuxt/scripts": "^0.11.6",
     "@nuxt/ui": "^3.0.2",
+    "@spotify/basic-pitch": "^1.0.1",
     "@tailwindcss/postcss": "^4.1.4",
     "@tailwindcss/vite": "^4.1.4",
+    "@tensorflow/tfjs": "^4.22.0",
     "@vueuse/core": "^13.1.0",
     "nitro-cloudflare-dev": "^0.2.2",
+    "nsfwjs": "^4.2.1",
     "nuxt": "^3.16.2",
     "ofetch": "^1.4.1",
     "vue": "^3.5.13",
