--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "cf-typegen": "wrangler types"
   },
   "dependencies": {
+    "@fingerprintjs/fingerprintjs": "^4.6.2",
     "@nuxt/image": "^1.10.0",
     "@nuxt/scripts": "^0.11.6",
     "@nuxt/ui": "^3.0.2",
+    "@nuxtjs/sitemap": "^7.2.10",
     "@spotify/basic-pitch": "^1.0.1",
     "@tailwindcss/postcss": "^4.1.4",
     "@tailwindcss/vite": "^4.1.4",
