优化相册页面和图片查看器组件
- 在nuxt.config.ts中根据环境配置SSR和缓存策略，提升性能。
- 新增ImageViewer组件，替代原有的图片查看器逻辑，增强用户体验。
- 更新相册页面，集成新的图片查看器，简化代码结构，提升可读性。
- 修改sitemap生成逻辑，确保相册URL的准确性。

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -2,6 +2,8 @@
  * For more details on how to configure Wrangler, refer to:
  * https://developers.cloudflare.com/workers/wrangler/configuration/
  */
+
+//  wrangler d1 execute portrait_db --file=./server/db/schema.sql
  {
 	"$schema": "node_modules/wrangler/config-schema.json",
 	"name": "portrait-app",
@@ -9,5 +11,18 @@
 	"pages_build_output_dir": "./dist",
 	"observability": {
 		"enabled": true
-	}
+	},
+	"d1_databases": [
+		{
+			"binding": "DB",
+			"database_name": "portrait_db",
+			"database_id": "80447bd7-347a-4559-a17a-659bb3b3482e"
+		}
+	],
+	"kv_namespaces": [
+		{
+		  "binding": "CACHE_KV",
+		  "id": "6bde0ad961ba4ad1ba0d500d0cb437b0"
+		}
+	]
 }
