添加多语言支持，更新nuxt.config.ts以包含法语、德语、西班牙语、日语、韩语、俄语、葡萄牙语和意大利语；更新package.json以引入@upstash/redis依赖

--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@fingerprintjs/fingerprintjs": "^4.6.2",
     "@nuxt/image": "^1.10.0",
     "@nuxt/scripts": "^0.11.6",
-    "@nuxt/ui": "^3.0.2",
+    "@nuxt/ui": "^3.1.1",
+    "@nuxtjs/i18n": "^9.5.4",
     "@nuxtjs/sitemap": "^7.2.10",
     "@spotify/basic-pitch": "^1.0.1",
     "@tailwindcss/postcss": "^4.1.4",
     "@tailwindcss/vite": "^4.1.4",
     "@tensorflow/tfjs": "^4.22.0",
+    "@upstash/redis": "^1.34.9",
     "@vueuse/core": "^13.1.0",
     "nitro-cloudflare-dev": "^0.2.2",
     "nsfwjs": "^4.2.1",
