--- a/package.json
+++ b/package.json
@@ -12,33 +12,33 @@
     "cf-typegen": "wrangler types"
   },
   "dependencies": {
-    "@fingerprintjs/fingerprintjs": "^4.6.2",
+    "@fingerprintjs/fingerprintjs": "4.6.2",
     "@nuxt/image": "^1.10.0",
-    "@nuxt/scripts": "^0.11.6",
-    "@nuxt/ui": "^3.1.1",
-    "@nuxtjs/i18n": "^9.5.4",
-    "@nuxtjs/sitemap": "^7.2.10",
-    "@spotify/basic-pitch": "^1.0.1",
-    "@tailwindcss/postcss": "^4.1.4",
-    "@tailwindcss/vite": "^4.1.4",
-    "@tensorflow/tfjs": "^4.22.0",
-    "@upstash/redis": "^1.34.9",
-    "@vueuse/core": "^13.1.0",
-    "nitro-cloudflare-dev": "^0.2.2",
-    "nsfwjs": "^4.2.1",
-    "nuxt": "^3.16.2",
-    "ofetch": "^1.4.1",
-    "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "@nuxt/scripts": "0.11.7",
+    "@nuxt/ui": "^3.1.3",
+    "@nuxtjs/i18n": "^9.5.5",
+    "@nuxtjs/sitemap": "7.3.0",
+    "@spotify/basic-pitch": "1.0.1",
+    "@tailwindcss/postcss": "4.1.8",
+    "@tailwindcss/vite": "^4.1.8",
+    "@tensorflow/tfjs": "4.22.0",
+    "@upstash/redis": "^1.35.0",
+    "@vueuse/core": "13.3.0",
+    "nitro-cloudflare-dev": "0.2.2",
+    "nsfwjs": "4.2.1",
+    "nuxt": "^3.17.4",
+    "ofetch": "1.4.1",
+    "vue": "3.5.16",
+    "vue-router": "4.5.1"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20250421.0",
-    "@iconify-json/heroicons": "^1.2.2",
-    "@iconify-json/lucide": "^1.2.37",
-    "autoprefixer": "^10.4.21",
-    "nuxt-hero-icons": "^0.0.9",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.4",
-    "wrangler": "4.12.0"
+    "@cloudflare/workers-types": "^4.20250603.0",
+    "@iconify-json/heroicons": "1.2.2",
+    "@iconify-json/lucide": "1.2.45",
+    "autoprefixer": "10.4.21",
+    "nuxt-hero-icons": "0.0.9",
+    "postcss": "^8.5.4",
+    "tailwindcss": "^4.1.8",
+    "wrangler": "4.19.1"
   }
 }
